// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders correctly with color prop 1`] = `
<h1
  className="sc-bxivhb gdORBh"
  color="red"
/>
`;

exports[`H1 renders correctly with floatLeft prop 1`] = `
<h1
  className="sc-bxivhb fYfjgZ"
/>
`;

exports[`H1 renders correctly with floatRight prop 1`] = `
<h1
  className="sc-bxivhb kVMhLd"
/>
`;

exports[`H1 renders correctly with no props 1`] = `
<h1
  className="sc-bxivhb gyEqD"
/>
`;

exports[`H1 renders correctly with size prop 1`] = `
<h1
  className="sc-bxivhb eFjRci"
  size="31px"
/>
`;

exports[`H1 renders correctly with weight prop 1`] = `
<h1
  className="sc-bxivhb jFaIcX"
/>
`;

exports[`H2 renders correctly with color prop 1`] = `
<h2
  className="sc-ifAKCX TjCVL"
  color="red"
/>
`;

exports[`H2 renders correctly with floatLeft prop 1`] = `
<h2
  className="sc-ifAKCX lAuRp"
/>
`;

exports[`H2 renders correctly with floatRight prop 1`] = `
<h2
  className="sc-ifAKCX kehYmr"
/>
`;

exports[`H2 renders correctly with no props 1`] = `
<h2
  className="sc-ifAKCX bvcRas"
/>
`;

exports[`H2 renders correctly with size prop 1`] = `
<h2
  className="sc-ifAKCX karqEg"
  size="31px"
/>
`;

exports[`H2 renders correctly with weight prop 1`] = `
<h2
  className="sc-ifAKCX iWTbI"
/>
`;

exports[`H3 renders correctly with color prop 1`] = `
<h3
  className="sc-EHOje haOeyz"
  color="red"
/>
`;

exports[`H3 renders correctly with floatLeft prop 1`] = `
<h3
  className="sc-EHOje dSloBB"
/>
`;

exports[`H3 renders correctly with floatRight prop 1`] = `
<h3
  className="sc-EHOje hanTRh"
/>
`;

exports[`H3 renders correctly with no props 1`] = `
<h3
  className="sc-EHOje fsyxVc"
/>
`;

exports[`H3 renders correctly with size prop 1`] = `
<h3
  className="sc-EHOje gpYrhu"
  size="31px"
/>
`;

exports[`H3 renders correctly with weight prop 1`] = `
<h3
  className="sc-EHOje gZSGwm"
/>
`;

exports[`H4 renders correctly with color prop 1`] = `
<h4
  className="sc-bZQynM jLTonR"
  color="red"
/>
`;

exports[`H4 renders correctly with floatLeft prop 1`] = `
<h4
  className="sc-bZQynM hwYzAU"
/>
`;

exports[`H4 renders correctly with floatRight prop 1`] = `
<h4
  className="sc-bZQynM bcHQcc"
/>
`;

exports[`H4 renders correctly with no props 1`] = `
<h4
  className="sc-bZQynM lmbOpe"
/>
`;

exports[`H4 renders correctly with size prop 1`] = `
<h4
  className="sc-bZQynM fAbwwL"
  size="31px"
/>
`;

exports[`H4 renders correctly with weight prop 1`] = `
<h4
  className="sc-bZQynM dlcHVE"
/>
`;

exports[`H5 renders correctly with clearLeft prop 1`] = `
<h5
  className="sc-gzVnrw cqNKbz"
/>
`;

exports[`H5 renders correctly with clearRight prop 1`] = `
<h5
  className="sc-gzVnrw iqcNt"
/>
`;

exports[`H5 renders correctly with color prop 1`] = `
<h5
  className="sc-gzVnrw kKxJsW"
  color="red"
/>
`;

exports[`H5 renders correctly with floatLeft prop 1`] = `
<h5
  className="sc-gzVnrw gHfgBd"
/>
`;

exports[`H5 renders correctly with floatRight prop 1`] = `
<h5
  className="sc-gzVnrw kCxcBU"
/>
`;

exports[`H5 renders correctly with no props 1`] = `
<h5
  className="sc-gzVnrw hIIUUA"
/>
`;

exports[`H5 renders correctly with size prop 1`] = `
<h5
  className="sc-gzVnrw dCnSHJ"
  size="31px"
/>
`;

exports[`H5 renders correctly with weight prop 1`] = `
<h5
  className="sc-gzVnrw hIIUUA"
/>
`;

exports[`Label renders correctly with no props 1`] = `
<label
  className="sc-gZMcBi bKibDO"
/>
`;

exports[`P1 renders correctly with no props 1`] = `
<p
  className="sc-htoDjs eWHOyG"
/>
`;

exports[`P2 renders correctly with no props 1`] = `
<p
  className="sc-dnqmqq ifpjuD"
/>
`;

exports[`S1 renders correctly with no props 1`] = `
<span
  className="sc-iwsKbI cdKkcq"
/>
`;
